@@ -4,25 +4,19 @@ Hash: SHA256
 AUX cython-0.22.patch 4804 SHA256 e7490987c956b1e312090951568dee53e3ed28070a21da2d5a8278e3250c706d SHA512 cd218b0db01cd424f8e5b26cd326dc186ba1328833858b607ffcd26add2e718761eaff012c7f0e051fd8dbad900529e672ed8ca05a6ac92a7113cf34d694d4dd WHIRLPOOL c2154a2bd673ce03a1addd22285ca3e6be7c29d310df3d2bb03263f431cfdaf8d4ec1e8fe36c6535a908af9e39b3796450613f206d93277c4b037921f6bf5431
 AUX cython-fixes.patch 1667 SHA256 f22281bbda72fd21daa80f9669c7105225a2dafb940d51f21138cd91a3582dbc SHA512 630ca8349da7ad2fd8c980e1ceca30a448f4895068aa05d58310893f6139314929d56433f54dc8aca8fa12fa2c6b95f84076c492cd6637dacd1af4be2816775c WHIRLPOOL 31e7a7947d4b81fdd0a2dd77a7bc4631621e2997761766f6387064e58bd30a2a73e8025a7ffbd72110ca364140120fc743de3ce901c93d437ea3561731084258
 DIST Kivy-1.8.0.tar.gz 14655888 SHA256 1bb5add88132c902ed746e7624034ecaab49e61f3fbbfde231604e887e6fb324 SHA512 e7057b008cceec9513961ddc3d4aaef2aa1a10de9c2de09ad82bd90ca88300047374e5f8c982cb018712fb0465c03208108c3110887ef383c00a45ee9e5bc81d WHIRLPOOL a6530edebcae34aede981c2f0db37a26a9378e148a073dc1396096b4db04ebdef0f6d96de4222383a5e2d84858bdf10383611751f9bf5ae625eafc67d1cf702f
+DIST Kivy-1.9.0.tar.gz 16178808 SHA256 b828617f858963f7873f5c81bb8824ca1dfa265e7811fce03599e2ba7200ffa0 SHA512 e0efc27f8ae070f5748570ee9224220791d32e931bbaf0bad5ddee894cf1d0f9ded5eebcc54d3b666491edaab0316923311f5e0cc7b1e46929d87ea3bec87f21 WHIRLPOOL c57c696752c88d3c8643e126180aa00b864df45bad0de4e6456143fd0f1486085a258a787ec2e4017b982004dd5a1212b11dbcb352f1f72b77591fa5fd9c934e
 EBUILD Kivy-1.8.0.ebuild 1215 SHA256 7c4d56f3fea5b16c572d4e310fa2444a30647f809d44010fca7fd8e656b0c06f SHA512 3edd7f7b6c9b8189557d5c3199ee9edfedb348ef9532e419ae2687535e2885ba6cfd44bfdebd588dab2d7cd3111724e5b3e1d932b6878f5c5fe815abdf1fd9ee WHIRLPOOL 399e8f520d4b81b1e9fc8514fb525b544ef2c916418d7b96c7ffb6c9bfa5b07c3ef16a1d00b089c56a5eed43a8bc80f11e504cd6a00ceaf61e0e6fcddeca6ff9
-MISC ChangeLog 1030 SHA256 b1b37e24534ee309080f22148d08111df1a6389c6487705a9affbbbb69138a26 SHA512 411ac91fc0b8dd1488de3a278a7491cc0c8f39a56ab2c3d1618a32334acb8bce7ad35472997e5fcc24877c98ad31658a0987c0626077d88723e57ff15862219c WHIRLPOOL ad16b52a63000867b0a4348a331b320c9a23b6b16876aa9739f6f3f76bd758740f5d5b2a20e1efbdf8bc7a6d86a71780492ab667f7b11bd38abb8c65dbdba0d0
+EBUILD Kivy-1.9.0.ebuild 1084 SHA256 d6ce030ec343cfbc4297accc3cf1c7a1f0d43c427e9c0683b8004e1c21ac4274 SHA512 5f3c15b95e3c0e2c3aeb3326f79e2d5ee1572b0d3e5df35a1566f44f1e54846001c82abdbb159b6f6889d924d3b8f2618c26aed665ab6f9d5dc79cc87d793431 WHIRLPOOL 08192b8002b7e481cb8b5ef4d8c5c3d47ff9072a3d4398c88321b68ada44545c75dced83f4e222c9d8535b2697d57f19369ace7b7c3ba77090c70bf23635e854
+MISC ChangeLog 1136 SHA256 2fb80a584c3df6873a2114d59c3b566b23ba9241f60199345c9899fb556a6423 SHA512 01b65fc6008413ce94fefa3b7dcd1a5d0032c5006f0a790d3c280a5703e1a64139f45a1d4b11acfc74f78b2fe1304adb2fd8a018ce39b3a2f0605fb6a8147a9d WHIRLPOOL 8bdca2d082b2ea4821a0b2b1911b6474f683a7ff7847dea98e8ff8ac54f3b69b46ffe0c7ab4efdf4abac2913b26d7210eebf8566e6b67c4647825ac01afc9ea7
 MISC metadata.xml 405 SHA256 f7bc0de1629637f683bc13a5716633fd891b94b99110272fa9a8325c7a4e15af SHA512 85b396edb91f819561f3b6a67baf37ff7593ff1f9947b1d93b32e80004c4d3689a279b40f60c60b1641ef64d659ae9929932a0753456185ff835140cdcc13d60 WHIRLPOOL 49f41ebe8dad13c6a74b1433657768f22dd74e6804ed35cd8ada9e0bb285d72606a1162322a02f6ee834b78de73eb3d7e8b57d08328a3de7fa5b4d93d4bb6197
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVJOJiXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOzHUQANWIQX8zkhaFhxEmOEICwSny
-DxbzDksk/uQqCMq58O6IKD8+Qrq0PJqQd7fBjdAt7xSs3W6W+B2UxzxaOBFQkfCg
-jZahkDvPdGFSaC+l0m+sZ6b3PTS4qY1QZvg/Jam5w19P2l3Sih8+0/v/f9eVgkzT
-j07GdwOaqi7qPaNzxd8UbM2FBmPYTEuFPGKwwiH8KrCNHqOIRGkDmNDDvdSJ4olY
-w9XfJdt57K9DfjQQ5lwJ+RfG/SvXp5b88XG34kLhn9aFM6b/ZK3DPnBYojpyf/7S
-8R4rSJeqPevWWiecLB50HRJ51xykY2qCxAlXO38QVTkJoRotC8//UcMibyNAd1Nu
-BpXM6fjsM/TZJWrLLuv053sIUH5teSNPBb3okWPHC00GPFCvCfFC08JurxhIIc0d
-i00KueeYQWKYb9OKYYfKA9VpYkaU4jQ48Xc0tUhKTFHmb3FNwwWYJYKUDxC2i48u
-HPY6mULH1aRxCDcRID0V1dtuklHb/nDYRriclSI73Z0Tzu0eE7ou1AwNAle/x2Jr
-ZZytdG1GiQ8IU4CsJsDkaWFnuTy1a99xFKJT4gOnr7CuMT9jeBhsd9n4AWKo35PZ
-r6qwNJivgC260B8+fkEsJyvleJLz06fSkKpLceVX7xbOuy2uzG37yXoiXLEcJqi/
-wOzBCyTjLbDhuHaFPoAu
-=wQoQ
+iQEcBAEBCAAGBQJVJ4jhAAoJEO1RxJ84ipLk+wsIALyR4VdV+fxp5bbwVZS/54oH
+x+xNcJqPuxjATV59NMfC4jL2m1Got4rLeqt4mbKoY0UDZN9Fsgl95WV4QWMbyhfL
+Df5ZAOuKL9oIRTXEz87RV7pBr6r3BUdPqlkPGs8K2n2FhUap0d32Z7QorQ3rpl9O
+bbKBILnnX3CUwf3p940x9jQ06SJrl8eOZNbjmeFqB9QR5lDhkevW6NIGErv5KU16
+M1tMR58MaFFojFLyZFAV+hNyb7TbKYbd4uLp3FZY8oWMUhiY6D97OdYdLivGftBO
+pgk2e4uABErgB1kFH+MMnMv6BNB9kHO8gyNz9s4gMgjNnrSX9hh/lUBl/XoitxU=
+=rvkM
 -----END PGP SIGNATURE-----
