@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=<dev-python/cython-0.22 garden? ( dev-python/kivy-garden ) gstreamer? ( dev-python/gst-python:1.0 ) cairo? ( dev-python/pycairo ) spell? ( dev-python/pyenchant ) dev-python/pygame dev-python/setuptools camera? ( media-libs/opencv ) virtual/python-imaging python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) python_targets_python3_4? ( dev-lang/python:3.4 ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,python_targets_python3_3(-)?,python_targets_python3_4(-)?,-python_single_target_python2_7(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-)]
+DESCRIPTION=A software library for rapid development of hardware-accelerated multitouch applications.
+EAPI=5
+HOMEPAGE=http://kivy.org/
+IUSE=cairo camera doc examples garden gstreamer spell python_targets_python2_7 python_targets_python3_3 python_targets_python3_4
+KEYWORDS=~amd64 ~x86
+LICENSE=MIT
+RDEPEND=<dev-python/cython-0.22 garden? ( dev-python/kivy-garden ) gstreamer? ( dev-python/gst-python:1.0 ) cairo? ( dev-python/pycairo ) spell? ( dev-python/pyenchant ) dev-python/pygame dev-python/setuptools camera? ( media-libs/opencv ) virtual/python-imaging python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) python_targets_python3_4? ( dev-lang/python:3.4 ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,python_targets_python3_3(-)?,python_targets_python3_4(-)?,-python_single_target_python2_7(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-)]
+REQUIRED_USE=|| ( python_targets_python2_7 python_targets_python3_3 python_targets_python3_4 )
+SLOT=0
+SRC_URI=mirror://pypi/K/Kivy/Kivy-1.9.0.tar.gz
+_eclasses_=distutils-r1	c01d5c4af34f4a37a51fc9638299c222	eutils	9fb270e417e0e83d64ca52586c4a79de	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	6d3a3cb5705b9fff1aeb7cfa4e3336fe	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4
+_md5_=bab710722a5512e885c9e657b1ccdf90
