@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX gnutls-2.12.20-AF_UNIX.patch 1041 SHA256 bd56d19bd1713ef3ddfca7768c2528aacb0c7425cd21f87d69b3d674504562a1 SHA512 a1564ace509fed3b0608ae66859979a364b173006fd43d77678dccb70577bbfd54953aa8c706aca77540ec28c3426a332e86c40722bbc7b4a23f9f50bee0478b WHIRLPOOL 9e27f8e7e82fdd53a11f1f7dfd10790f4d2c67d74bc68d9ce55718a57ef80d391f8fadab93f6186597c52ecedcef2d3f1ff16a77778aedd50545e5829e626baf
 AUX gnutls-2.12.20-guile-parallelmake.patch 349 SHA256 f6c81df63b3dce52df7754cffe9dfae0b94fcb1bedd68cf99d5546b4f00a8c37 SHA512 2c92817e1ac43e301f0c39edca0991e832a875204e9232106f660157f1db91ce942569ef16193f6b1e80038f3a000836f4ac2bb3d728d4bbb602e09f46ba5efd WHIRLPOOL d578f81a0d645c7430301aa35fb15cc4fde3acc044758f28d6046742053965c0b27c0a2d738794bfb6ce27164331b11387402413b40abac8d95192741f1d710c
 AUX gnutls-2.12.20-libadd.patch 988 SHA256 b1f73ec17feb72817f39f109ec2e4dc69ea8d6b6d62ef243491e85164ff513ac SHA512 a0552276b356fd63e802a886e1243ef6341c6b8d1857814a0b2a686fd605d7c03316965cdfcdb70162547033efe9f2d1c17e442a30925d97ef691c2d573eba68 WHIRLPOOL 4ed528cb20705d91db05f0c533cbfd0356fa3292393eba75b45a22457cb23da80639ef739d889af4f64038a97553f3f990cc08f5e31608b1dc83c74b0e1c46d3
@@ -20,7 +23,14 @@ DIST gnutls-3.4.0.tar.xz 6453932 SHA256 b422544431bfb5c4e24a605b6c793ee34792cc79
 EBUILD gnutls-2.12.23-r6.ebuild 3675 SHA256 fde1f48cfe231601626db9cfc21d148d9e4b5e843febdd44c23b1b163ae5be26 SHA512 7bdee9dc92f35159f03cda67f2143cb1ec0802ea18c6ba57b02fc8a4ad92f915725e3a11aa4a300a8b5eb7c4be4e8d769f8abf34855b2da67d34557dcfb79d1c WHIRLPOOL 280d35f2b1b96097e5dea680a588bedc063c6cbfe3ffab239a183b73ed94bcc5f86917ca52ec78c7969c388096167fe02b58ee28b3201eea8a331bcb78bd6f59
 EBUILD gnutls-3.3.10-r2.ebuild 4953 SHA256 92c45827b456e4931be3a93a3f920c07a3e4d9bdfb851fc553c6fbc7ba3f39f7 SHA512 7b47209882095494d4b9f416aa25046042e679f4a46a15a3a31f3969914f1fb4a4cfb2797d1bc8ebb93386adee14c886cad695f6569feb5537f4be08a7f752ce WHIRLPOOL 0892f8a8966bd83e784c65c7ae9c768cf19b48fc19a18dcf4507b3c6caea7ec2250614591485e57d9204e201de3f511595717993ccc5ba2c5a8613ce704c2949
 EBUILD gnutls-3.3.12.ebuild 4962 SHA256 a9e68cd7141cfe5d30112915150b17ecb2825b08fa1ed505964faf18b9ef97d9 SHA512 23279a2b4c2e204edee51d8cf5c9eb5550e622f3987aa874adb757bf3c1b08b21b7bd0025bc67f9b7c4ff619c509b5aed7a7ee0790fbbd8c271c49cee24942d6 WHIRLPOOL c82d0c93a0855bafc8ad0cd795d163d28588f86ff7b95c494a6d101007884ddd4a8e4c3ae495e0d986c0fbedff6ff4d1bb98c09bb8cffe4b19e236d7c2dffff4
-EBUILD gnutls-3.3.14.ebuild 4962 SHA256 33868b4b8df3623cff611085fd4d81dd90f3978ad564d6554a7946723f881203 SHA512 7c23a4513830a7b58ab7ff634226c7a3d1cff2170c504db83409944ed89f135d608b1e12d1055a1a21dcda929c6c1976b034a8828d32872097b2d42d1143fb12 WHIRLPOOL 4969d96d24b4a78d4f1df0fabf4396a44da6ad2a3d5b23f73c6b048083b55cee2281d24a31c0c4940894f864fdf781ceefa84146e0e391684d49ed7519293673
-EBUILD gnutls-3.4.0.ebuild 4187 SHA256 0132b206524ffb138c80c7fac0fbcd48cad749a12ea93f5f345e1a137617220f SHA512 618c6e5cfed3cc7af07005f056bd09b7bc845b00c6a9f2e05635fb1873245ab1c74df9bf2133794cd928ca570dc0f81aa5c8fd3d4b132ecc7884ace9ad0c9d13 WHIRLPOOL a501dd3e76195e491db04d843dbe8dde4cd121c1520ec80342cc10bdfefb0fc46cf55a9a49b337ba502e166c503c00d1002e7d78b88f6ce1e5868a89d4dbc745
-MISC ChangeLog 79875 SHA256 cbbde7b7f8b372f4b52bc10dcb69a907755158242d8b1c9b4b4a3237656b192f SHA512 4db866f339568a37330b82035d21737b287729267d91ddfde734bc0f4f1424e75df71192237df824c696e3bfd055c17aad425559f3f316b42caac7aa0f8b2330 WHIRLPOOL 16e9dd11b9e8e9e91e4d3d0d4c15ec568eb85219f93030896e4b8ed9e5572d14737ac726a4f236fc453563364da5a290d8f9e06d21302680f486d77755856b7b
-MISC metadata.xml 936 SHA256 0eade7b78d1cc49b7d8079223333117ba75bf0d240e0e315378128961a6f6260 SHA512 c6be65846e94888b1d4c3fe835580b035d7219e1ed5b006cca81165f5af34f5a6fccfba6bd2ecbcdcac5d3cc0765dec097ec881b4cd79d63a34b4d8a0dcc3664 WHIRLPOOL 84f61ffb7952bde75927f21d5f0964607801671083aa9012c902bc0b92b377b8607f8697f5f72eb3e592098034341b3609b09e9938764c9fd618106e486da2d5
+EBUILD gnutls-3.3.14.ebuild 5018 SHA256 5be0a6594c786f5dacfd05071163767039f2df2fb82b5dcd0681717c4ec4e7fb SHA512 20dcd24ad9faa34d5cb419dd201857f411ccb925874037d25e3a5673407b14131b3443d921a577b222603b347577be35af3df052095e32782405ac8e3febb7c6 WHIRLPOOL 9b63d5f566a61961a78d5f83bf915ebbd8a3d10c0ba213616e679c2d168e8ab1ed1305be33b76289b46ac35964a8f12b88d30f5b5003dbae912f6ba78409eb74
+EBUILD gnutls-3.4.0.ebuild 4244 SHA256 f136c3090ceae08675d4b1727dadc140aeaf9bd4b020f263127c6d51d02090f3 SHA512 31ffa9060a2ea49763dc91d859acf748af3e5ec5dbead98994fb186163199d3b76aa88fd3f23d687c931266d4529e047bcc2b9a78fe7e7a5e29b663a3fddd8e9 WHIRLPOOL e20e12227d514e9509d3d8cdeb794b617d71ebcf59ef92177cf3e16b211cf562152a2081ddbcaa4382e05f03c3a899798e28887f56d22dd49e09935710fd1d9a
+MISC ChangeLog 80052 SHA256 1968c30126d4a26acdd9b5893ed8af7e0b5347351f644e206e51c56be03f451c SHA512 fa3ed40a6ba5f2cf7185cdd533b938d8022d61e97aaeec468483b465c0387b486f66d142cb2b3cf7e46bd692e20e6c71e535b4f46b61dbc23b44766edf699ed4 WHIRLPOOL 974793fe3f21a0b2e3cd2dba36d39cab2f4529a4bb544c9fadf823ee7899bb015f785b3f01ea08fb7e46836912f22fb57e50968181fc022e1033aa26c431e8c0
+MISC metadata.xml 1023 SHA256 05138b1a8676ab5301d1d7b5eaad829faf485f954a2af4232219f9585a950187 SHA512 c462e545a288b4d7397f64ea9db2691ae554fce793a7f8f79554618499f88817374ad37aa3f11a7df21847d985d4549946a25faa5ab7a68ac40ab21231977ccf WHIRLPOOL 18581d9887f7324a2febd30e3e293ac616c5854927257cf2c3f65494979b450de109b014aaf31d3bab43efe39cf99221ac21852cbac11a04b28478d264a25ab6
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlUniisACgkQXYk9GL8g3FHL+wD8CRL66afHb7WcZGcNihk1IGDV
+o2ROB4I/kxpPozPM17QBAKQzCyJ+ehBAwHfGIfHwzVvIuzbUqsmtCCVoCmU19Owm
+=QgO+
+-----END PGP SIGNATURE-----
