@@ -17,6 +17,9 @@
     <flag name="nettle" restrict="&lt;net-libs/gnutls-3">
       Use <pkg>dev-libs/nettle</pkg> as crypto backend
     </flag>
+    <flag name="openssl">
+      Build openssl compatibility libraries.    
+    </flag>
     <flag name="pkcs11">
       Add support for PKCS#11 through <pkg>app-crypt/p11-kit</pkg>
     </flag>
