@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/Kivy
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/Kivy/ChangeLog,v 1.7 2015/04/08 08:05:08 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/Kivy/ChangeLog,v 1.8 2015/04/10 08:29:03 slis Exp $
+
+*Kivy-1.9.0 (10 Apr 2015)
+
+  10 Apr 2015; Sławek Lis <slis@gentoo.org> +Kivy-1.9.0.ebuild:
+  version bump
 
   08 Apr 2015; Michał Górny <mgorny@gentoo.org> Kivy-1.8.0.ebuild:
   Drop old Python implementations
